@@ -1,9 +1,9 @@
-/*package com.money_track.demo.services;
+package com.money_track.demo.services;
 
+import com.money_track.demo.entities.DTO.ProfileDTO;
 import com.money_track.demo.entities.DTO.UserDTO;
 import com.money_track.demo.entities.User;
 import com.money_track.demo.entities.enums.Roles;
-import com.money_track.demo.exceptions.AlreadyExistsException;
 import com.money_track.demo.exceptions.NotFoundException;
 import com.money_track.demo.repositories.UserRepository;
 import org.junit.jupiter.api.Assertions;
@@ -14,13 +14,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -30,7 +30,11 @@ public class UserServiceTest {
     private UserRepository userRepository;
 
     @Mock
-    private PasswordEncoder passwordEncoder;
+    private SecurityContext securityContext;
+
+    @Mock
+    private Authentication authentication;
+
 
     @InjectMocks
     private UserService userService;
@@ -39,86 +43,74 @@ public class UserServiceTest {
 
     @BeforeEach
     void setup(){
-        user = new User("user","702.413.770-30","user@email.com","user123", Roles.ROLE_USER);
-        admin = new User("admin","730.136.230-71","admin@email.com","admin123", Roles.ROLE_ADMIN);
+        user = new User(1L,"user","702.413.770-30","user@email.com","user123", Roles.ROLE_USER, new ArrayList<>());
+        admin = new User(2L,"admin","730.136.230-71","admin@email.com","admin123", Roles.ROLE_ADMIN, new ArrayList<>());
+
+        when(authentication.getName()).thenReturn("user@email.com");
+        when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
     }
 
     @DisplayName("test find all users SUCCESS")
     @Test
     void testFindAllUsersSuccess(){
-        when(userRepository.findAll()).thenReturn(Arrays.asList(user,admin));
+        when(userRepository.findAll()).thenReturn(List.of(user,admin));
         List<UserDTO> allUsers = userService.findAllUsers();
 
         Assertions.assertNotNull(allUsers);
         Assertions.assertEquals(2, allUsers.size());
-        Assertions.assertEquals("user@email.com",allUsers.getFirst().getEmail());
-        Assertions.assertEquals("admin@email.com",allUsers.get(1).getEmail());
+        Assertions.assertEquals("user@email.com",allUsers.getFirst().email());
+        Assertions.assertEquals("admin@email.com",allUsers.get(1).email());
     }
 
-    @DisplayName("test final all users FAILED")
+   @DisplayName("test final all users FAILED")
     @Test
     void testFindAllUsersFailed(){
-        when(userRepository.findAll()).thenThrow(new RuntimeException("Erro interno"));
+        when(userRepository.findAll()).thenReturn(Collections.emptyList());
+        List<UserDTO> allUsers = userService.findAllUsers();
 
-        RuntimeException exception = Assertions.assertThrows(RuntimeException.class, () -> userService.findAllUsers());
-        Assertions.assertEquals("Erro interno", exception.getMessage());
+        Assertions.assertNotNull(allUsers);
+        Assertions.assertTrue(allUsers.isEmpty());
     }
 
     @DisplayName("test find user by id SUCCESS")
     @Test
     void testFindUserByIdSuccess(){
-
         when(userRepository.findById(any())).thenReturn(Optional.of(user));
         UserDTO user = userService.findUserById(1L);
 
         Assertions.assertNotNull(user);
-        Assertions.assertEquals("user@email.com", user.getEmail());
+        Assertions.assertEquals("user@email.com", user.email());
     }
 
     @DisplayName("test find user by id FAILED")
     @Test
     void testFindUserByIdFailed(){
-
         when(userRepository.findById(any())).thenReturn(Optional.empty());
+        NotFoundException exception =  Assertions.assertThrows(NotFoundException.class, () -> userService.findUserById(anyLong()));
 
-        NotFoundException exception = Assertions.assertThrows(NotFoundException.class, () -> userService.findUserById(1L));
         Assertions.assertEquals("não existe User com este ID", exception.getMessage());
     }
 
-    @DisplayName("test create user SUCCESS")
+    @DisplayName("test get profile user success")
     @Test
-    void testCreateUserSuccess(){
-        when(passwordEncoder.encode(anyString())).thenReturn("senha-criptografada");
-        when(userRepository.save(any())).thenReturn(admin);
-        UserDTO newUser = userService.createUser(admin);
+    void testGetProfileUserSuccess(){
+        when(userRepository.findUserByEmail(anyString())).thenReturn(user);
+        ProfileDTO profile = userService.getProfileUser();
 
-        Assertions.assertNotNull(newUser);
-        Assertions.assertEquals("admin@email.com", newUser.getEmail());
+        Assertions.assertNotNull(profile);
+        Assertions.assertEquals("user@email.com",profile.email());
+        Assertions.assertEquals("user",profile.name());
     }
 
-    @DisplayName("test create user FAILED case1")
+    /*@DisplayName("test get profile user failed")
     @Test
-    void testCreateUserFailed1(){
-        User user = new User("Leandro","532.469.460-60","user@email.com","pass123",Roles.ROLE_USER);
-        when(userRepository.existsByEmail(user.getEmail())).thenReturn(true);
+    void testGetProfileUserFailed(){
+        User user2 = new User();
+        when(userRepository.findUserByEmail(anyString())).thenReturn(user2);
+        NotFoundException exception =  Assertions.assertThrows(NotFoundException.class, () -> userService.getProfileUser());
 
-        AlreadyExistsException exception = Assertions.assertThrows(AlreadyExistsException.class, () -> userService.createUser(user));
-
-        Assertions.assertEquals("Este email já está cadastrado", exception.getMessage());
-        verify(userRepository,never()).save(any());
-
-    }
-
-    @DisplayName("teste create user FAILED case2")
-    @Test
-    void testCreateUserFailed2(){
-        User user = new User("Leandro","702.413.770-30","user2@email.com","pass123",Roles.ROLE_USER);
-        when(userRepository.existsByCpf(user.getCpf())).thenReturn(true);
-
-        AlreadyExistsException exception = Assertions.assertThrows(AlreadyExistsException.class, () -> userService.createUser(user));
-
-        Assertions.assertEquals("Este CPF já está cadastrado",exception.getMessage());
-        verify(userRepository, never()).save(any());
+        Assertions.assertEquals("Não existe User com este email",exception.getMessage());
     }
 
     @DisplayName("test update User SUCCESS")
@@ -174,6 +166,5 @@ public class UserServiceTest {
 
         verify(userRepository).deleteById(1L);
         Assertions.assertEquals("Não existe user com este ID",exception.getMessage());
-    }
+    }*/
 }
-*/
